refactor(codegen): remove unnecessary `final` keywords from method parameters and optimize type usage
- Removed redundant `final` modifiers from method parameters for consistency and improved readability.
- Replaced explicit type declarations with inferred ones in object creation (`new Type<>()`).
- Applied minor formatting changes for cleaner syntax.